# dispatch-protocol

./: .gitignore  README.md  VISION.md  pyproject.toml
adapters/: __init__.py  base.py  n8n.py  openclaw.py  systemd.py
schema/: agents.schema.yaml  health.schema.yaml  task.schema.yaml
src/: __init__.py  cli.py  compiler.py  deployer.py  models.py  planner.py
src/dispatch_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adapters.py  test_discover.py  test_plan_compile.py
